Add Kalle to the AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Lapo Calamandrei <calamandrei@gmail.com>
 Rodney Dawes  <dobey.pwns@gmail.com>
+Kalle Persson <kalle@nemus.se>
 Jakub Steiner <jimmac@gmail.com>
 
